# likelion-guestbook

./: .gitignore  CNAME  README.md  index.html
assets/: index--oSapyGu.js  index-B2xM7dkA.js  index-BBb8__3E.js  index-BIPHLNjP.js  index-BRR_lyh0.js  index-Bl4101HB.js  index-CuIgJ_tV.js  index-DDWrG1jq.js  index-Df7DQvzk.js  index-YiHLsMVa.js  index-k5XKz2vW.css
backend/: README.md  pyproject.toml
backend/config/: settings.py  urls.py
backend/posts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_review.py  0003_alter_commit_password.py  0004_alter_commit_password.py
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: CNAME
frontend/src/: App.css  App.jsx
frontend/src/api/: index.js
frontend/src/components/: Achievements.jsx  CommitDetail.jsx  CommitForm.jsx  CommitHistory.jsx  ContributionGraph.jsx  Header.jsx  RecentReviews.jsx  StatsCard.jsx
